# alephone-vita

Source_Files/: shell.cpp
Source_Files/CSeries/: csalerts_sdl.cpp  cspaths_sdl.cpp
Source_Files/Misc/: preferences.cpp
Source_Files/RenderMain/: OGL_Headers.h
Source_Files/RenderOther/: screen.cpp
vita/: CMakeLists.txt  vita_compat.c  vita_platform.c  vita_runtime.c
vita/sce_sys/livearea/contents/: template.xml
